--- a/src/main/webapp/vistas/controlsolicitudes/List.xhtml
+++ b/src/main/webapp/vistas/controlsolicitudes/List.xhtml
@@ -33,13 +33,13 @@
                             </f:facet>
                             <h:outputText value="#{item.idcontrolsolicitud}"/>
                         </p:column>
-                        <p:column>
+                        <p:column filterBy="#{item.gestor}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_gestor}"/>
                             </f:facet>
                             <h:outputText value="#{item.gestor}"/>
                         </p:column>
-                        <p:column>
+                        <p:column filterBy="#{item.fechaasignacion}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_fechaasignacion}"/>
                             </f:facet>
@@ -65,7 +65,7 @@
                             </f:facet>
                             <h:outputText value="#{item.status}"/>
                         </p:column>
-                        <p:column>
+                        <p:column filterBy="#{item.fechatermino}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_fechatermino}"/>
                             </f:facet>
@@ -73,7 +73,7 @@
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
                             </h:outputText>
                         </p:column>
-                        <p:column>
+                        <p:column filterBy="#{item.fechacancelacion}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_fechacancelacion}"/>
                             </f:facet>
@@ -81,19 +81,19 @@
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
                             </h:outputText>
                         </p:column>
-                        <p:column>
+                        <p:column filterBy="#{item.totalimagenes}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_totalimagenes}"/>
                             </f:facet>
                             <h:outputText value="#{item.totalimagenes}"/>
                         </p:column>
-                        <p:column>
+                        <p:column filterBy="#{item.solicitud}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_solicitud}"/>
                             </f:facet>
                             <h:outputText value="#{item.solicitud}"/>
                         </p:column>
-                        <p:column>
+                        <p:column filterBy="#{item.idpersonalatencion}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_idpersonalatencion}"/>
                             </f:facet>
