--- a/src/main/webapp/vistas/solicitudesInternet/List.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/List.xhtml
@@ -14,9 +14,10 @@
         <ui:define name="body">                                     
             <h:form id="SolicitudesInternetListForm">  
                 <p:contextMenu for="datalist">
-                    <p:menuitem icon="ui-icon-search" value="#{bundle.View}" update=":SolicitudesInternetViewForm" oncomplete="PF('SolicitudesInternetViewDialog').show()" />
+                    <p:menuitem icon="ui-icon-search" value="#{bundle.View}" update=":SolicitudesInternetViewForm" oncomplete="PF('SolicitudesInternetViewDialog').show()" action="#{solicitudesInternetController.iniciarValores()}"/>
                     <p:menuitem icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SolicitudesInternetEditForm  " oncomplete="PF('SolicitudesInternetEditDialog').show()" action="#{solicitudesInternetController.iniciarValores()}" />
                     <p:menuitem icon="ui-icon-plus" value="#{bundle.Create}"  actionListener="#{solicitudesInternetController.prepareCreate}" update=":SolicitudesInternetCreateForm" oncomplete="PF('SolicitudesInternetCreate').show()" />
+                    <p:menuitem icon="ui-icon-plus" value="Asignar Responsable" actionListener="#{controlsolicitudesController.prepareCreate}" update=":asignarSolictudForm" oncomplete="PF('asignarSolicitud').show()" />
                 </p:contextMenu>
                 <p:panel header="#{bundle.ListSolicitudesInternetTitle}">
                     <p:dataTable id="datalist" value="#{solicitudesInternetController.items}" var="item"
@@ -98,6 +99,7 @@
             <ui:include src="Create.xhtml"/>
             <ui:include src="Edit.xhtml"/>
             <ui:include src="View.xhtml"/>    
+            <ui:include src="../controlsolicitudes/asignarResponsable.xhtml"/>
             </ui:define>
         <ui:define name="footer">
             
