--- a/src/main/webapp/vistas/ratificaciones/Create.xhtml
+++ b/src/main/webapp/vistas/ratificaciones/Create.xhtml
@@ -11,13 +11,9 @@
             <h:form id="RatificacionesCreateForm">
                 <h:panelGroup id="display">
                     <div class="ui-fluid">
-                    <p:panelGrid columns="2" rendered="#{ratificacionesController.selected != null}" layout="grid" columnClasses="ui-grid-col-5,ui-grid-col-14" styleClass="ui-panelgrid-blank">
-                        <p:outputLabel value="#{bundle.RatificacionesLabel_idratificacion}" for="idratificacion" />
-                        <p:inputText id="idratificacion" value="#{ratificacionesController.selected.idratificacion}" title="#{bundle.RatificacionesTitle_idratificacion}" required="true" requiredMessage="#{bundle.RatificacionesRequiredMessage_idratificacion}"/>                        
-                        <p:outputLabel value="#{bundle.RatificacionesLabel_anio}" for="anio" />
-                        <p:calendar id="anio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.anio}" title="#{bundle.RatificacionesTitle_anio}" required="true" requiredMessage="#{bundle.RatificacionesRequiredMessage_anio}"/>
+                    <p:panelGrid columns="2" rendered="#{ratificacionesController.selected != null}" layout="grid" styleClass="ui-panelgrid-blank">
                         <p:outputLabel value="#{bundle.RatificacionesLabel_inicio}" for="inicio" />
-                        <p:calendar id="inicio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.inicio}" title="#{bundle.RatificacionesTitle_inicio}"/>
+                        <p:calendar id="inicio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.inicio}" title="#{bundle.RatificacionesTitle_inicio}" required="true" requiredMessage="#{bundle.RatificacionesRequiredMessage_anio}"/>
                         <p:outputLabel value="#{bundle.RatificacionesLabel_fin}" for="fin" />
                         <p:calendar id="fin" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.fin}" title="#{bundle.RatificacionesTitle_fin}"/>
                         <p:outputLabel value="#{bundle.RatificacionesLabel_responsables}" for="responsables" />
@@ -25,12 +21,18 @@
                         <p:outputLabel value="#{bundle.RatificacionesLabel_responsablee}" for="responsablee" />
                         <p:inputText id="responsablee" value="#{ratificacionesController.selected.responsablee}" title="#{bundle.RatificacionesTitle_responsablee}" />
                         <p:outputLabel value="#{bundle.RatificacionesLabel_comentarios}" for="comentarios" />
-                        <p:inputText id="comentarios" value="#{ratificacionesController.selected.comentarios}" title="#{bundle.RatificacionesTitle_comentarios}" />
+                        <p:inputTextarea id="comentarios" value="#{ratificacionesController.selected.comentarios}" title="#{bundle.RatificacionesTitle_comentarios}" />                        
                         <p:outputLabel value="#{bundle.RatificacionesLabel_status}" for="status" />
                         <p:selectBooleanCheckbox id="status" value="#{ratificacionesController.selected.status}" />
                     </p:panelGrid>
                     </div>
-                    <p:commandButton actionListener="#{ratificacionesController.create}" value="#{bundle.Save}" update="display,:RatificacionesListForm:datalist,:growl" oncomplete="handleSubmit(args,'RatificacionesCreateDialog');"/>
+                    <p:commandButton actionListener="#{ratificacionesController.create}" value="#{bundle.Save}" update="display,:RatificacionesListForm:datalist,:growl" oncomplete="handleSubmit(args,'RatificacionesCreateDialog');">
+                        <p:confirm header="#{bundle.Confirmacion}" message="#{bundle.MsjConfirmacion}" icon="ui-icon-alert" />
+                    </p:commandButton>
+                    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" closable="false">
+                        <p:commandButton value="#{bundle.BotonYes}" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                        <p:commandButton value="#{bundle.BotonNo}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                    </p:confirmDialog>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
