--- a/src/main/webapp/vistas/procesoratificacion/Create.xhtml
+++ b/src/main/webapp/vistas/procesoratificacion/Create.xhtml
@@ -12,7 +12,19 @@
             <h:form id="ProcesoratificacionCreateForm">
                 <h:panelGroup id="display">
                     <div class="ui-fluid">
-                    <p:panelGrid columns="2" rendered="#{procesoratificacionController.selected != null}" layout="grid" columnClasses="ui-grid-col-5,ui-grid-col-14" styleClass="ui-panelgrid-blank">
+                    <p:panelGrid columns="2" rendered="#{procesoratificacionController.selected != null}" layout="grid" styleClass="ui-panelgrid-blank">
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_idratificacion}" for="idratificacion" />                       
+                        <p:selectOneMenu id="idratificacion" value="#{procesoratificacionController.selected.idratificacion}" >
+                            <f:selectItems value="#{ratificacionesController.getfindByStatus()}"
+                                           var="idratificacionItem"
+                                           itemValue="#{idratificacionItem}" itemLabel="#{idratificacionItem.idratificacion}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_gestor}" for="gestor" />
+                        <p:selectOneMenu id="gestor" value="#{procesoratificacionController.selected.gestor}" >
+                            <f:selectItems value="#{gestoresController.itemsfindByStatusActivo}"
+                                           var="gestorItem"
+                                           itemValue="#{gestorItem}" itemLabel="#{gestorItem.gestor}"/>
+                        </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.ProcesoratificacionLabel_freceprati}" for="freceprati" />
                         <p:calendar id="freceprati" pattern="MM/dd/yyyy" value="#{procesoratificacionController.selected.freceprati}" title="#{bundle.ProcesoratificacionTitle_freceprati}"/>
                         <p:outputLabel value="#{bundle.ProcesoratificacionLabel_cambios}" for="cambios" />
@@ -20,7 +32,7 @@
                         <p:outputLabel value="#{bundle.ProcesoratificacionLabel_status}" for="status" />
                         <p:inputText id="status" value="#{procesoratificacionController.selected.status}" title="#{bundle.ProcesoratificacionTitle_status}" />
                         <p:outputLabel value="#{bundle.ProcesoratificacionLabel_comentarios}" for="comentarios" />
-                        <p:inputText id="comentarios" value="#{procesoratificacionController.selected.comentarios}" title="#{bundle.ProcesoratificacionTitle_comentarios}" />
+                        <p:inputTextarea id="comentarios" value="#{procesoratificacionController.selected.comentarios}" title="#{bundle.ProcesoratificacionTitle_comentarios}" />
                         <p:outputLabel value="#{bundle.ProcesoratificacionLabel_fechaEnvioclaves}" for="fechaEnvioclaves" />
                         <p:calendar id="fechaEnvioclaves" pattern="MM/dd/yyyy" value="#{procesoratificacionController.selected.fechaEnvioclaves}" title="#{bundle.ProcesoratificacionTitle_fechaEnvioclaves}"/>
                         <p:outputLabel value="#{bundle.ProcesoratificacionLabel_fechaConficlaves}" for="fechaConficlaves" />
@@ -29,18 +41,7 @@
                         <p:inputText id="proceso" value="#{procesoratificacionController.selected.proceso}" title="#{bundle.ProcesoratificacionTitle_proceso}" />
                         <p:outputLabel value="#{bundle.ProcesoratificacionLabel_documentacion}" for="documentacion" />
                         <p:inputText id="documentacion" value="#{procesoratificacionController.selected.documentacion}" title="#{bundle.ProcesoratificacionTitle_documentacion}" />
-                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_idratificacion}" for="idratificacion" />
-                        <p:selectOneMenu id="idratificacion" value="#{procesoratificacionController.selected.idratificacion}" >
-                            <f:selectItems value="#{ratificacionesController.itemsAvailableSelectOne}"
-                                           var="idratificacionItem"
-                                           itemValue="#{idratificacionItem}"/>
-                        </p:selectOneMenu>
-                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_gestor}" for="gestor" />
-                        <p:selectOneMenu id="gestor" value="#{procesoratificacionController.selected.gestor}" >
-                            <f:selectItems value="#{gestoresController.itemsAvailableSelectOne}"
-                                           var="gestorItem"
-                                           itemValue="#{gestorItem}"/>
-                        </p:selectOneMenu>
+                        
                     </p:panelGrid>
                     </div>    
                     <p:commandButton actionListener="#{procesoratificacionController.create}" value="#{bundle.Save}" update="display,:ProcesoratificacionListForm:datalist,:growl" oncomplete="handleSubmit(args,'ProcesoratificacionCreateDialog');"/>
