--- a/src/main/webapp/vistas/procesoratificacion/List.xhtml
+++ b/src/main/webapp/vistas/procesoratificacion/List.xhtml
@@ -16,6 +16,11 @@
         <ui:define name="body">
             <h:form id="ProcesoratificacionListForm">
                 <p:panel header="#{bundle.ListProcesoratificacionTitle}">
+                    <p:contextMenu for="datalist">                       
+                        <p:menuitem id="createButton"   value="#{bundle.Create}"    icon="ui-icon-plus"     update=":ProcesoratificacionCreateForm"    oncomplete="PF('ProcesoratificacionCreateDialog').show()" actionListener="#{procesoratificacionController.prepareCreate}" />
+                        <p:menuitem id="editButton"     value="#{bundle.Edit}"      icon="ui-icon-pencil"   update=":ProcesoratificacionEditForm"      oncomplete="PF('ProcesoratificacionEditDialog').show()"/>
+                        <p:menuitem id="viewButton"     value="#{bundle.View}"      icon="ui-icon-search"   update=":ProcesoratificacionViewForm"      oncomplete="PF('ProcesoratificacionViewDialog').show()"/>                       
+                    </p:contextMenu>
                     <p:dataTable widgetVar="datalist" id="datalist" value="#{procesoratificacionController.items}" var="item"
                                  selectionMode="single" selection="#{procesoratificacionController.selected}"
                                  paginator="true"
@@ -23,11 +28,7 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton"/>
-
-                        <p:column headerText="#{bundle.ProcesoratificacionTitle_idratificacion}" filterBy="#{item.idratificacion}" filterMatchMode="startsWith">
+                        <p:column headerText="#{bundle.ProcesoratificacionTitle_idratificacion}">                                                     
                             <h:outputText value="#{item.idratificacion}"/>
                         </p:column>
                         <p:column headerText="#{bundle.ProcesoratificacionTitle_gestor}" filterBy="#{item.gestor}" filterMatchMode="startsWith">
@@ -60,12 +61,6 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ProcesoratificacionTitle_comentarios}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.comentarios}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
                                 <h:outputText value="#{bundle.ProcesoratificacionTitle_fechaEnvioclaves}"/>
                             </f:facet>
                             <h:outputText value="#{item.fechaEnvioclaves}">
@@ -92,11 +87,6 @@
                             </f:facet>
                             <h:outputText value="#{item.documentacion}"/>
                         </p:column>
-                        <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{procesoratificacionController.prepareCreate}" update=":ProcesoratificacionCreateForm" oncomplete="PF('ProcesoratificacionCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":ProcesoratificacionViewForm" oncomplete="PF('ProcesoratificacionViewDialog').show()" disabled="#{empty procesoratificacionController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":ProcesoratificacionEditForm" oncomplete="PF('ProcesoratificacionEditDialog').show()" disabled="#{empty procesoratificacionController.selected}"/>
-                        </f:facet>
                     </p:dataTable>
                 </p:panel>
             </h:form>
